RESOLVED FIXED45199
Uninitialized member variable in PolicyCallback
https://bugs.webkit.org/show_bug.cgi?id=45199
Summary Uninitialized member variable in PolicyCallback
Brent Fulgham
Reported 2010-09-03 14:22:26 PDT
BoundsChecker noticed several copy operations for PolicyCallback where the m_argument member was uninitialized. Proposed patch: $ svn diff PolicyCallback.cpp Index: PolicyCallback.cpp =================================================================== --- PolicyCallback.cpp (revision 66733) +++ PolicyCallback.cpp (working copy) @@ -42,6 +42,7 @@ : m_navigationFunction(0) , m_newWindowFunction(0) , m_contentFunction(0) + , m_argument(0) { }
Attachments
Resolve uninitialized variable. (1.06 KB, patch)
2011-03-08 15:57 PST, Brent Fulgham
aroben: review+
Brent Fulgham
Comment 1 2011-03-08 15:57:43 PST
Created attachment 85104 [details] Resolve uninitialized variable. Correct an old uninitialized variable found during a BoundsChecker run.
Brent Fulgham
Comment 2 2011-03-08 16:02:24 PST
Note You need to log in before you can comment on or make changes to this bug.