Correct uninitialized variable in PolicyCallback found while running WebKit in BoundsChecker. https://bugs.webkit.org/show_bug.cgi?id=45199.

Reviewed by Adam Roben.

* loader/PolicyCallback.cpp:
(WebCore::PolicyCallback::PolicyCallback): Initialize
m_argument.



git-svn-id: svn://svn.chromium.org/blink/trunk@80601 bbb929c8-8fbe-4397-9dbb-9b2b20218538