third_party/WebKit/Source/WebCore/loader/PolicyCallback.cpp
@@ -43,6 +43,7 @@ PolicyCallback::PolicyCallback()
     : m_navigationFunction(0)
     , m_newWindowFunction(0)
     , m_contentFunction(0)
+    , m_argument(0)
 {
 }
 
